Update the projects page, add all the screenies in

--- a/views/projects.haml
+++ b/views/projects.haml
@@ -10,69 +10,59 @@
       The latest and long-overdue realignment of this site, my personal site, toolmantim.com. A refreshed design and backend rewrite. Source is available <a href="http://github.com/toolmantim/toolmantim">on github</a>. <strong>Launched January&nbsp;2009</strong>
     %ul.images
       %li
-        %img{:src => "/images/project-placeholder-1.jpg", :width => "320", :height => "213", :alt => "toolmantim 1"}/
+        %img{:src => "/images/projects/toolmantim-1.jpg", :width => "320", :height => "213", :alt => "Homepage"}/
       %li
-        %img{:src => "/images/project-placeholder-2.jpg", :width => "320", :height => "213", :alt => "toolmantim 2"}/
+        %img{:src => "/images/projects/toolmantim-2.jpg", :width => "320", :height => "213", :alt => "Article archive"}/
       %li
-        %img{:src => "/images/project-placeholder-3.jpg", :width => "320", :height => "213", :alt => "toolmantim 3"}/
-      %li
-        %img{:src => "/images/project-placeholder-2.jpg", :width => "320", :height => "213", :alt => "toolmantim 4"}/
-      %li
-        %img{:src => "/images/project-placeholder-1.jpg", :width => "320", :height => "213", :alt => "toolmantim 5"}/
+        %img{:src => "/images/projects/toolmantim-3.jpg", :width => "320", :height => "213", :alt => "Phat footer"}/
 
   %li#hello-canary
     %h2 Hello Canary
     %p
-      A personal portfolio site for my girlfriend&rsquo;s graphic design business Hello Canary. A static site with a Sinatra mailer and a javascript CloudMachine. I gave a behind-the-scenes explanation titled <a href="/">Static(ish) sites with Nanoc and Sinatra</a> at the November Ruby on Rails Oceania Sydney meetup. <strong>Launched December&nbsp;2008</strong>
+      A personal portfolio site for my girlfriend&rsquo;s graphic design business Hello Canary. Carla did the design, I did the rest (front-end code, back-end code and the JS). I gave a behind-the-scenes explanation titled <a href="/">Static(ish) sites with Nanoc and Sinatra</a> at the November Ruby on Rails Oceania Sydney meetup. <strong>Launched December&nbsp;2008</strong>
     %p.link
       %a{:href => "http://hellotherecanary.com/"} hellotherecanary.com &rarr;
     %ul.images
       %li
-        %img{:src => "/images/project-placeholder-1.jpg", :width => "320", :height => "213", :alt => "hellocanary 1"}/
+        %img{:src => "/images/projects/hello-canary-1.jpg", :width => "320", :height => "213", :alt => "Homepages"}/
       %li
-        %img{:src => "/images/project-placeholder-2.jpg", :width => "320", :height => "213", :alt => "hellocanary 2"}/
+        %img{:src => "/images/projects/hello-canary-2.jpg", :width => "320", :height => "213", :alt => "Shop"}/
       %li
-        %img{:src => "/images/project-placeholder-3.jpg", :width => "320", :height => "213", :alt => "hellocanary 3"}/
+        %img{:src => "/images/projects/hello-canary-3.jpg", :width => "320", :height => "213", :alt => "Contact"}/
 
   %li#wwmd
     %h2 What Would Myles Do
     %p
-      A one-hour project developed and launched at <a href="http://www.osdc.com.au/">OSDC</a> 2008, WWMD is a <a href="http://isthisyourpaperonsingleservingsites.com/">single serving site</a> providing a direct tap into Myles Byrne&rsquo;s brain. Launched at the November Ruby on Rails Sydney meetup with the presentation <a href="/">Web Wired Meta Directions</a>. Source is available <a href="http://github.com/toolmantim/wwmd">on github</a> <strong>Launched December&nbsp;2008</strong>
+      A one-hour project developed and launched at <a href="http://www.osdc.com.au/">OSDC</a> 2008, WWMD is a <a href="http://isthisyourpaperonsingleservingsites.com/">single serving site</a> providing a direct tap into Myles Byrne&rsquo;s brain. <a href="http://github.com/chrislloyd">Chris Lloyd</a> did the design, I built the app and we launched it at the November Ruby on Rails Sydney meetup with the presentation <a href="/">Web Wired Meta Directions</a>. Source is available <a href="http://github.com/toolmantim/wwmd">on github</a> <strong>Launched December&nbsp;2008</strong>
     %p.link
       %a{:href => "http://whatwouldmylesdo.com/"} whatwouldmylesdo.com &rarr;
     %ul.images
       %li
-        %img{:src => "/images/project-placeholder-1.jpg", :width => "320", :height => "213", :alt => ""}/
-      %li
-        %img{:src => "/images/project-placeholder-2.jpg", :width => "320", :height => "213", :alt => ""}/
-      %li
-        %img{:src => "/images/project-placeholder-3.jpg", :width => "320", :height => "213", :alt => ""}/
+        %img{:src => "/images/projects/what-would-myles-do-1.jpg", :width => "320", :height => "213", :alt => "Homepage"}/
 
   %li#webjam-mobile
     %h2 webjam.com.au mobile edition
     %p
-      To accompany my presentation at Web Directions South 2008 <a href="http://www.webdirections.org/resources/pete-ottery-tim-lucas-developing-for-iphone/">Developing for the iPhone</a> this mobile 2.0 version of the webjam site was developed to serve as an example of best practice in design and integration. Source is available <a href="http://github.com/webjam/webjam">on github</a>. <strong>Launched September&nbsp;2008</strong>
+      To accompany my presentation at Web Directions South 2008 <a href="http://www.webdirections.org/resources/pete-ottery-tim-lucas-developing-for-iphone/">Developing for the iPhone</a> this mobile 2.0 version of the webjam site was developed to serve as an example of best practice in design and integration of a Mobile 2.0 optimised version of a site. Source is available <a href="http://github.com/webjam/webjam">on github</a>. <strong>Launched September&nbsp;2008</strong>
     %p.link
-      %a{:href => ""} webjam.com.au/home.mobile &rarr;
+      %a{:href => "http://webjam.com.au/home.mobile"} webjam.com.au/home.mobile &rarr;
     %ul.images
       %li
       %li
-        %img{:src => "/images/project-placeholder-1.jpg", :width => "320", :height => "213", :alt => ""}/
+        %img{:src => "/images/projects/webjam-mobile-1.jpg", :width => "320", :height => "213", :alt => "Homepage"}/
       %li
-        %img{:src => "/images/project-placeholder-2.jpg", :width => "320", :height => "213", :alt => ""}/
-      %li
-        %img{:src => "/images/project-placeholder-3.jpg", :width => "320", :height => "213", :alt => ""}/
+        %img{:src => "/images/projects/webjam-mobile-2.jpg", :width => "320", :height => "213", :alt => "Image viewing"}/
 
   %li#iphone-news
     %h2 iphone.news.com.au
     %p
-      Working with <a href="http://c41.com.au/">Pete Ottery</a>, a fantastic  designer at News, we developed the the iPhone version of one of Australia&rsquo;s largest news sites: <a href="http://news.com.au/">news.com.au</a>. Many of the lessons learned were later integrated into the <a href="#webjam-mobile">mobile version of webjam.com.au</a>. <strong>Launched July&nbsp;2008</strong>
+      Working with <a href="http://c41.com.au/">Pete Ottery</a>, a fantastic  designer at News, we developed the the iPhone version of one of Australia&rsquo;s largest news sites: <a href="http://news.com.au/">news.com.au</a>. I did the back-end and code and javascript. Many of the lessons learned were later integrated into the <a href="#webjam-mobile">mobile version of webjam.com.au</a>. <strong>Launched July&nbsp;2008</strong>
     %p.link
-      %a{:href => ""} iphone.news.com.au
+      %a{:href => "http://iphone.news.com.au/"} iphone.news.com.au &rarr;
     %ul.images
       %li
-        %img{:src => "/images/project-placeholder-1.jpg", :width => "320", :height => "213", :alt => ""}/
+        %img{:src => "/images/projects/iphone-news-1.jpg", :width => "320", :height => "213", :alt => "Homepage"}/
       %li
-        %img{:src => "/images/project-placeholder-2.jpg", :width => "320", :height => "213", :alt => ""}/
+        %img{:src => "/images/projects/iphone-news-2.jpg", :width => "320", :height => "213", :alt => "Article utilities"}/
       %li
-        %img{:src => "/images/project-placeholder-3.jpg", :width => "320", :height => "213", :alt => ""}/
+        %img{:src => "/images/projects/iphone-news-3.jpg", :width => "320", :height => "213", :alt => "Footer"}/
