Added a summary para to the intro article

--- a/articles/refreshed-realigned-and-ready-for-09.haml
+++ b/articles/refreshed-realigned-and-ready-for-09.haml
@@ -77,3 +77,7 @@
   I'm all for ideas on how to encourage the openness and accountability.
   
   In the mean time I've included the old comments in the articles until I converge on some kind of consensus.
+  
+  h2. Onwards and Upwards
+  
+  With this up-to-date, AR's latest project, our new office and site and then SXSW in March it's going to be an exciting year.
