Fix the look of the highlight link for standard fonts. Add -moz-border-radius too.

--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -23,8 +23,9 @@
 =highlight_link
   :display block
   :color = !standard_text
-  :padding 6px 10px 0px 10px
+  :padding 2px 10px 0 10px
   :background-color = !very_dull_text
+  :line-height 2em
 
 =highlight_link_hover
   :color = !very_bright_text
@@ -76,6 +77,7 @@ body
   :clear both
   :background-color = !grey_background
   :-webkit-border-radius 5px
+  :-moz-border-radius 5px
   :padding 20px 20px 15px 20px
   :margin-top 40px
   
@@ -303,7 +305,6 @@ body.archive
       :padding 1em 1em 1px 1.5em
       :background-color = !grey_background
       :margin-bottom 2em
-      :-webkit-border-radius 1em
       :color = !slightly_dull_text
 
     pre
