Make all relative links and images absolute for the atom feed

--- a/articles/refreshed-realigned-and-ready-for-09.haml
+++ b/articles/refreshed-realigned-and-ready-for-09.haml
@@ -42,7 +42,7 @@
 
   After sketching and scanning a Menki logo and bashing together a website on the kitchen table at "the nerf palace":http://nerfpalace.org/ it was a shame to have it join it's cousin in the land of designs-never-published.
       
-  Luckily I have the honour to work with some brilliant designers and don't often get a chance to give design and front-end coding some time. Things like setting up "a grid":http://toolmantim.com/?grid (props to "JSM's 24ways post":http://24ways.org/2008/making-modular-layout-systems), fidgeting with source order and wearing my finger out with trackpad photoshopping has been jolly good fun.
+  Luckily I have the honour to work with some brilliant designers and don't often get a chance to give design and front-end coding some time. Things like setting up "a grid":/?grid (props to "JSM's 24ways post":http://24ways.org/2008/making-modular-layout-systems), fidgeting with source order and wearing my finger out with trackpad photoshopping has been jolly good fun.
   
   There's still more work to do on the article layout&#8212;for example I'd like to have a left gutter for small images&#8212;but it's a good start.
     
@@ -52,11 +52,11 @@
   
   h3. Errors and ommissions
   
-  Many of the technical articles, such as a "Getting Rails talking to SQLServer on OSX via ODBC":http://toolmantim.com/articles/getting_rails_talking_to_sqlserver_on_osx_via_odbc, are old and discussing software I haven't touched since writing about it. Errors and corrections end up in the comments, but then once the article is updated there's a spattering of redundant comments. Comments like these should simply be integrated and discarded, so I'm choosing to leave these to email.
+  Many of the technical articles, such as a "Getting Rails talking to SQLServer on OSX via ODBC":/articles/getting_rails_talking_to_sqlserver_on_osx_via_odbc, are old and discussing software I haven't touched since writing about it. Errors and corrections end up in the comments, but then once the article is updated there's a spattering of redundant comments. Comments like these should simply be integrated and discarded, so I'm choosing to leave these to email.
   
   h3. Open-ended discussions
   
-  I've tried spurring a discussion by an article which poses a question, such as "Full-blown APIs with respond_to?":http://toolmantim.com/articles/full_blown_apis_with_respond_to.
+  I've tried spurring a discussion by an article which poses a question, such as "Full-blown APIs with respond_to?":/articles/full_blown_apis_with_respond_to.
   
   Not only does it feel like the wrong place to have the discussion there just aren't that many eyeballs on the article to get interesting feedback.
   
