--- a/views/feed.haml
+++ b/views/feed.haml
@@ -21,4 +21,4 @@
       %published= article.published.xmlschema
       %link{:href => "http://toolmantim.com#{article_path(article)}", :rel => "alternate", :hreflang => "en", :type => "text/html"}/
       %content{:type => "xhtml", "xml:lang"=>"en", "xml:base"=>"http://toolmantim.com/"}
-        %div{:xmlns => "http://www.w3.org/1999/xhtml"}= article_html(article)
+        %div{:xmlns => "http://www.w3.org/1999/xhtml"}= absoluteify_links(article_html(article))
