Added an idea to the onwards heading for consistency

--- a/articles/refreshed-realigned-and-ready-for-09.haml
+++ b/articles/refreshed-realigned-and-ready-for-09.haml
@@ -7,7 +7,6 @@
 
   h2(#menki). Menki
 
-
   <div class="pic right two">
     <a href="http://www.flickr.com/photos/toolmantim/3161120053/"><img src="http://farm4.static.flickr.com/3106/3161120053_1f13717bf7_m.jpg" width="142" height="240" alt="The Menki design" /></a>
   </div>
@@ -78,6 +77,6 @@
   
   In the mean time I've included the old comments in the articles until I converge on some kind of consensus.
   
-  h2. Onwards and Upwards
+  h2(#onwards-and-upwards). Onwards and Upwards
   
   With this up-to-date, AR's latest project, our new office and site and then SXSW in March it's going to be an exciting year.
