A bunch of IE fixes

--- a/views/projects.haml
+++ b/views/projects.haml
@@ -56,7 +56,7 @@
   %li#iphone-news
     %h2 iphone.news.com.au
     %p
-      Working with <a href="http://c41.com.au/">Pete Ottery</a>, a fantastic  designer at News, we developed the the iPhone version of one of Australia&rsquo;s largest news sites: <a href="http://news.com.au/">news.com.au</a>. I did the back-end and code and javascript. Many of the lessons learned were later integrated into the <a href="#webjam-mobile">mobile version of webjam.com.au</a>. <strong>Launched July&nbsp;2008</strong>
+      Working with <a href="http://c41.com.au/">Pete Ottery</a>, a fantastic  designer at News, we developed the the iPhone version of one of Australia&rsquo;s largest news sites: <a href="http://news.com.au/">news.com.au</a>. I did the back-end code and javascript. Many of the lessons learned were later integrated into the <a href="#webjam-mobile">mobile version of webjam.com.au</a>. <strong>Launched July&nbsp;2008</strong>
     %p.link
       %a{:href => "http://iphone.news.com.au/"} iphone.news.com.au &rarr;
     %ul.images
