--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -14,7 +14,7 @@
   :line-height 1.5em
   
 =bell_gothic
-  :font-family "Bell Gothic Std", arial, sans-serif
+  :font-family "Bell Gothic Std", "Lucida Grande", arial, sans-serif
   
 =big_white_heading
   :font-size 1.8em
@@ -23,7 +23,7 @@
 =highlight_link
   :display block
   :color = !standard_text
-  :padding 4px 10px 0 10px
+  :padding 2px 10px 0 10px
   :background-color = !very_dull_text
   :line-height 2em
 
@@ -255,7 +255,6 @@ body.archive
 
     p, li
       +standard_text_size
-      :word-spacing -0.1em
       :font-size 1.2em
       :line-height 1.7em
 
