--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,6 +8,8 @@
     %link{:rel => "shortcut icon", :href => "/favicon.ico"}/
 
     %link{:href => versioned_stylesheet('screen'), :media => "screen", :rel => "stylesheet", :type => "text/css"}/
+    /[if lte IE 7]
+      %link{:href => versioned_stylesheet('ie'), :media => "screen", :rel => "stylesheet", :type => "text/css"}/
 
     - if @show_open_id_delegate
       %link{:rel => "openid.server", :href => "http://www.myopenid.com/server"}/
