Various other IE fixes

--- a/articles/refreshed-realigned-and-ready-for-09.haml
+++ b/articles/refreshed-realigned-and-ready-for-09.haml
@@ -63,7 +63,7 @@
   
   They feel good, but we've got twitter and friends where their transient nature is OK and they have more social context to strangers who would have read it at the end of the article.
   
-  h3. Social media, openness and accountability
+  h3. Social media and openness
   
   And then there's that whole "Social Media thang":http://liako.biz/2008/12/thank-you-2008-you-finally-gave-new-media-a-name/.
   
@@ -72,8 +72,6 @@
   Making tools to do this well is hard: live preview, update notifications, spam management, etc. I just don't want to spend my time writing and maintaining that code.
   
   Twitter is too brief, emails too closed and you can always publish your thoughts in an article (it's been "done before":http://gilesbowkett.blogspot.com/2007/05/rails-developers-junior-and-senior.html)... so I'm not sure what the answer is. I've thought of integrating "disqus":http://disqus.com/ but I'm not sure that's the right answer either.
-  
-  I'm all for ideas on how to encourage the openness and accountability.
   
   In the mean time I've included the old comments in the articles until I converge on some kind of consensus.
   
