--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -424,8 +424,8 @@ body.projects-js ol.projects > li
       :position relative
       :display block
       :float left
-      :width 9px
-      :height 9px
+      :width 10px
+      :height 10px
       :text-indent -10000px
       :margin-right 2px
     
@@ -435,7 +435,7 @@ body.projects-js ol.projects > li
         :left 0
         :width 100%
         :height 100%
-        :background transparent url(/images/image-navigator-dots.png) -10px 0
+        :background transparent url(/images/image-navigator-dots.gif) -10px 0 no-repeat
       
       &.active span, &.active:hover span
         :background-position 0 0
