Remove link to to WWMD preso that's not yet up

--- a/views/projects.haml
+++ b/views/projects.haml
@@ -33,7 +33,7 @@
   %li#wwmd
     %h2 What Would Myles Do
     %p
-      A one-hour project developed and launched at <a href="http://www.osdc.com.au/">OSDC</a> 2008, WWMD is a <a href="http://isthisyourpaperonsingleservingsites.com/">single serving site</a> providing a direct tap into Myles Byrne&rsquo;s brain. <a href="http://github.com/chrislloyd">Chris Lloyd</a> did the design, I built the app and we launched it at the November Ruby on Rails Sydney meetup with the presentation <a href="/">Web Wired Meta Directions</a>. Source is available <a href="http://github.com/toolmantim/wwmd">on github</a> <strong>Launched December&nbsp;2008</strong>
+      A one-hour project developed and launched at <a href="http://www.osdc.com.au/">OSDC</a> 2008, WWMD is a <a href="http://isthisyourpaperonsingleservingsites.com/">single serving site</a> providing a direct tap into Myles Byrne&rsquo;s brain. <a href="http://github.com/chrislloyd">Chris Lloyd</a> did the design, I built the app and we launched it at the November Ruby on Rails Sydney meetup with the presentation Web Wired Meta Directions. Source is available <a href="http://github.com/toolmantim/wwmd">on github</a> <strong>Launched December&nbsp;2008</strong>
     %p.link
       %a{:href => "http://whatwouldmylesdo.com/"} whatwouldmylesdo.com &rarr;
     %ul.images
