Remove other funky link to a presentation not yet uploaded

--- a/views/projects.haml
+++ b/views/projects.haml
@@ -19,7 +19,7 @@
   %li#hello-canary
     %h2 Hello Canary
     %p
-      A personal portfolio site for my girlfriend&rsquo;s graphic design business Hello Canary. Carla did the design, I did the rest (front-end code, back-end code and the JS). I gave a behind-the-scenes explanation titled <a href="/">Static(ish) sites with Nanoc and Sinatra</a> at the November Ruby on Rails Oceania Sydney meetup. <strong>Launched December&nbsp;2008</strong>
+      A personal portfolio site for my girlfriend&rsquo;s graphic design business Hello Canary. Carla did the design, I did the rest (front-end code, back-end code and the JS). I gave a behind-the-scenes explanation titled Static(ish) sites with Nanoc and Sinatra at the November Ruby on Rails Oceania Sydney meetup. <strong>Launched December&nbsp;2008</strong>
     %p.link
       %a{:href => "http://hellotherecanary.com/"} hellotherecanary.com &rarr;
     %ul.images
