Fix the look of the highlight links. Remove &rarr; in favour of :after.

--- a/views/_meta.haml
+++ b/views/_meta.haml
@@ -21,6 +21,6 @@
 
 %ul#navigation
   %li
-    %a{:href => "/articles"} Articles &rarr;
+    %a{:href => "/articles"} Articles
   %li
-    %a{:href => "/projects"} Projects &rarr;
+    %a{:href => "/projects"} Projects
