--- a/views/projects.haml
+++ b/views/projects.haml
@@ -21,7 +21,7 @@
     %p
       A personal portfolio site for my girlfriend&rsquo;s graphic design business Hello Canary. Carla did the design, I did the rest (front-end code, back-end code and the JS). I gave a behind-the-scenes explanation titled Static(ish) sites with Nanoc and Sinatra at the November Ruby on Rails Oceania Sydney meetup. <strong>Launched December&nbsp;2008</strong>
     %p.link
-      %a{:href => "http://hellotherecanary.com/"} hellotherecanary.com &rarr;
+      %a{:href => "http://hellotherecanary.com/"} hellotherecanary.com
     %ul.images
       %li
         %img{:src => "/images/projects/hello-canary-1.jpg", :width => "320", :height => "213", :alt => "Homepages"}/
@@ -35,7 +35,7 @@
     %p
       A one-hour project developed and launched at <a href="http://www.osdc.com.au/">OSDC</a> 2008, WWMD is a <a href="http://isthisyourpaperonsingleservingsites.com/">single serving site</a> providing a direct tap into Myles Byrne&rsquo;s brain. <a href="http://github.com/chrislloyd">Chris Lloyd</a> did the design, I built the app and we launched it at the November Ruby on Rails Sydney meetup with the presentation Web Wired Meta Directions. Source is available <a href="http://github.com/toolmantim/wwmd">on github</a> <strong>Launched December&nbsp;2008</strong>
     %p.link
-      %a{:href => "http://whatwouldmylesdo.com/"} whatwouldmylesdo.com &rarr;
+      %a{:href => "http://whatwouldmylesdo.com/"} whatwouldmylesdo.com
     %ul.images
       %li
         %img{:src => "/images/projects/what-would-myles-do-1.jpg", :width => "320", :height => "213", :alt => "Homepage"}/
@@ -45,7 +45,7 @@
     %p
       To accompany my presentation at Web Directions South 2008 <a href="http://www.webdirections.org/resources/pete-ottery-tim-lucas-developing-for-iphone/">Developing for the iPhone</a> this mobile 2.0 version of the webjam site was developed to serve as an example of best practice in design and integration of a Mobile 2.0 optimised version of a site. Source is available <a href="http://github.com/webjam/webjam">on github</a>. <strong>Launched September&nbsp;2008</strong>
     %p.link
-      %a{:href => "http://webjam.com.au/home.mobile"} webjam.com.au/home.mobile &rarr;
+      %a{:href => "http://webjam.com.au/home.mobile"} webjam.com.au/home.mobile
     %ul.images
       %li
       %li
@@ -58,7 +58,7 @@
     %p
       Working with <a href="http://c41.com.au/">Pete Ottery</a>, a fantastic  designer at News, we developed the the iPhone version of one of Australia&rsquo;s largest news sites: <a href="http://news.com.au/">news.com.au</a>. I did the back-end code and javascript. Many of the lessons learned were later integrated into the <a href="#webjam-mobile">mobile version of webjam.com.au</a>. <strong>Launched July&nbsp;2008</strong>
     %p.link
-      %a{:href => "http://iphone.news.com.au/"} iphone.news.com.au &rarr;
+      %a{:href => "http://iphone.news.com.au/"} iphone.news.com.au
     %ul.images
       %li
         %img{:src => "/images/projects/iphone-news-1.jpg", :width => "320", :height => "213", :alt => "Homepage"}/
