More edits of the hello world article

--- a/articles/refreshed-realigned-and-ready-for-09.haml
+++ b/articles/refreshed-realigned-and-ready-for-09.haml
@@ -3,7 +3,7 @@
 
 :textile
 
-  It was at over 2.5 years ago I did anything major to toolmantim.com. For the last 2.4 years I've wanted to redesign it and the past 1.5 years I've wanted to re-code it. Top that off with working on the new (but yet to be released) "Agency Rainford":http://agencyrainford.com site and Carla's "Hello Canary":http://hellotherecanary.com I'd had enough and found some hours between "Squatter":http://flickr.com/photos/toolmantim/3142586197/ and "ridiculously well-decorated desserts":http://flickr.com/photos/toolmantim/3134787020/ these holidays to get something new up.
+  It was over 2.5 years ago I did anything major to toolmantim.com. For the last 2.4 years I've wanted to redesign it and the past 1.5 years I've wanted to re-code it. Top that off with working on the new (but yet to be released) "Agency Rainford":http://agencyrainford.com site and Carla's "Hello Canary":http://hellotherecanary.com I'd had enough and found some hours between "Squatter":http://flickr.com/photos/toolmantim/3142586197/ and "ridiculously well-decorated desserts":http://flickr.com/photos/toolmantim/3134787020/ these holidays to get something new up.
 
   h2(#menki). Menki
 
@@ -11,7 +11,7 @@
     <a href="http://www.flickr.com/photos/toolmantim/3161120053/"><img src="http://farm4.static.flickr.com/3106/3161120053_1f13717bf7_m.jpg" width="142" height="240" alt="The Menki design" /></a>
   </div>
 
-  It was about 9 months ago I started writing "Menki":http://github.com/toolmantim/menki, the <a href="http://enkiblog.com/">Enki</a>-inspired blogging software that was never to be. "hassox":http://github.com/hassox and "lachlanhardy":http://lachstock.com.au/ pitched in with patches&#8212;hell, Lachlan even noticed a PSD I'd pushed and coded up the design for the Menki site w/o me even knowing&#8212;total dude. Unfortunately Menki wasn't to be, but fortunately two weeks later and a few spare holiday hours pushing to github and here it is, the new toolmantim, shiny and reading for your viewing.
+  It was about 9 months ago I started writing "Menki":http://github.com/toolmantim/menki, the <a href="http://enkiblog.com/">Enki</a>-inspired blogging software that was never to be. "hassox":http://github.com/hassox and "lachlanhardy":http://lachstock.com.au/ pitched in with patches&#8212;hell, Lachlan even noticed a PSD I'd pushed and coded up the design for the Menki site w/o me even knowing&#8212;total dude. Though Menki wasn't to be a few spare holiday hours pushing to github and here it is, the new toolmantim, shiny and ready for your viewing.
 
   h2(#ze-codes). Simplifying ze codes
 
@@ -19,10 +19,10 @@
   
   My immediate requirements were simple:
 
-  # Create and preview articles with good live preview
-  # Make any style and site changes necessary as I authored the article
-  # Provide an ATOM for the articles
-  # Provide a mechanism for article feedback
+  # Create and preview articles (the last revision of toolmantim had this, as well as auto-saving of drafts)
+  # All style and site changes as I authored an article
+  # ATOM for the articles
+  # A mechanism for article feedback
 
   From "the readme":http://github.com/toolmantim/toolmantim/tree/master/Readme.textile:
   
@@ -35,19 +35,19 @@
     </ul>
   </blockquote>
   
-  Feel free to steal and plunder, and you've "plenty of other options":http://github.com/search?q=blog if your use case wildly diverges. If you're keen to see something extracted then I'd love to hear your thoughts.
+  Feel free to steal and plunder, and you've "plenty of other options":http://github.com/search?q=blog if you want something different. If you're keen to use it or see something extracted then give me a holler.
   
   h2(#new-design). A new design
 
-  After sketching and scanning a Menki logo and bashing together a website on the kitchen table at "the nerf palace":http://nerfpalace.org/ it was a shame to have it join it's cousin in the land of designs-never-published.
-      
-  Luckily I have the honour to work with some brilliant designers and don't often get a chance to give design and front-end coding some time. Things like setting up "a grid":/?grid (props to "JSM's 24ways post":http://24ways.org/2008/making-modular-layout-systems), fidgeting with source order and wearing my finger out with trackpad photoshopping has been jolly good fun.
+  Luckily I have the honour to work with some brilliant designers and don't often get a chance to give design and front-end coding some time. Things like setting up "a grid":/?grid (props to "JSM's 24ways post":http://24ways.org/2008/making-modular-layout-systems), fidgeting with source order and wearing my finger out with trackpad photoshopping has been jolly good fun. This new design borrows heavily where the Menki design left off.
   
   There's still more work to do on the article layout&#8212;for example I'd like to have a left gutter for small images&#8212;but it's a good start.
 
+  It would have been a shame to let the Menki logo and website join its cousins in the land of designs-never-published&#8212;after all, it was bashing together from the kitchen table of "the nerf palace":http://nerfpalace.org/.
+
   h2(#comments-and-discussion). Comments and discussion
-  
-  A well trodden topic, and not one with the same answer for everyone, I've debated long and hard about whether to include comments and their value to the site. Different types of feedback require different tools and consideration.
+
+  I've debated long and hard about whether to include comments and what value they give the site. Different types of feedback require different tools and consideration and I think it's the mishmash of all the types of feedback which makes comments ultimately too unwieldily.
   
   h3. Errors and ommissions
   
@@ -55,13 +55,13 @@
   
   h3. Open-ended discussions
   
-  I've tried spurring a discussion by an article which poses a question, such as "Full-blown APIs with respond_to?":/articles/full_blown_apis_with_respond_to.
+  I've tried spurring a discussion by an article which poses a question, such as "Full-blown APIs with respond_to?":/articles/full_blown_apis_with_respond_to
   
-  Not only does it feel like the wrong place to have the discussion there just aren't that many eyeballs on the article to get interesting feedback.
+  I'd much prefer to email people I know or a mailing list&#8212;this small corner of the web is definitely not the right place for this kind of discussion.
   
   h3. Social commentary and congratulations
   
-  They feel good, but we've got twitter and friends where their transient nature is OK and they have more social context to strangers who would have read it at the end of the article.
+  They feel good to leave and to receive but twitter is probably more suited to these, especially when most of the time they're from friends.
   
   h3. Social media and openness
   
@@ -74,3 +74,5 @@
   Twitter is too brief, emails too closed and you can always publish your thoughts in an article (it's been "done before":http://gilesbowkett.blogspot.com/2007/05/rails-developers-junior-and-senior.html)... so I'm not sure what the answer is. I've thought of integrating "disqus":http://disqus.com/ but I'm not sure that's the right answer either.
   
   In the mean time I've included the old comments in the articles until I converge on some kind of consensus.
+  
+  
