More feed validation tweaking

--- a/articles/merb_mongrel_not_mongrel_merb.haml
+++ b/articles/merb_mongrel_not_mongrel_merb.haml
@@ -8,7 +8,7 @@
   
   I naively went upon setting up something similar for a production Merb app: <em>balancer to thin to Merb</em>. This actually works just fine thanks to thin's baked-in support for Merb... but it's not really what you want. You'll also find it hard to use frozen Merb.
   
-  Thanks to geniuses that are <a href="http://github.com/ezmobius/">ezra</a> and <a href="http://github.com/wycats/">yehuda</a>, to run merb in production is actually the same as development&mdash;you use <code>merb</code>!
+  Thanks to geniuses that are <a href="http://github.com/ezmobius/">ezra</a> and <a href="http://github.com/wycats/">yehuda</a>, to run merb in production is actually the same as development&#8212;you use <code>merb</code>!
   
   Merb itself hooks up to which ever adapter you want it to speak to the web through... whether it be mongrel, thin, ebb or mycoolnewrackhandler.
   
