--- a/views/feed.haml
+++ b/views/feed.haml
@@ -3,7 +3,7 @@
  
   %title toolmantim articles
   %link{:href => "http://toolmantim.com/articles.atom", :rel => "self", :hreflang => "en", :type => "text/html"}/
-  %link{:href => "http://toolmantim.com/articles", :rel => "alternate", :hreflang => "en", :type => "text/html"}/
+  %link{:href => "http://toolmantim.com/articles", :rel => "alternate", :hreflang => "en", :type => "application/atom+xml"}/
    
   %author
     %name Tim Lucas
