--- a/views/feed.haml
+++ b/views/feed.haml
@@ -2,8 +2,8 @@
 %feed{:xmlns => "http://www.w3.org/2005/Atom"}
  
   %title toolmantim articles
-  %link{:href => "http://toolmantim.com/articles.atom", :rel => "self", :hreflang => "en", :type => "text/html"}/
-  %link{:href => "http://toolmantim.com/articles", :rel => "alternate", :hreflang => "en", :type => "application/atom+xml"}/
+  %link{:href => "http://toolmantim.com/articles.atom", :rel => "self", :hreflang => "en", :type => "application/atom+xml"}/
+  %link{:href => "http://toolmantim.com/articles", :rel => "alternate", :hreflang => "en", :type => "text/html"}/
    
   %author
     %name Tim Lucas
