--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -454,3 +454,8 @@ body.projects-js ol.projects > li
     
       &:hover span
         :background-position -20px 0
+        
+.not-found p, .error p
+  +standard_text_size
+  :text-align center
+  :margin-bottom 1em
