--- a/views/not_found.haml
+++ b/views/not_found.haml
@@ -1,4 +1,6 @@
 - @page_title = "toolmantim.com - not found"
 - @body_class = "not-found"
 
-%p Deary me! The page you&rsquo;re after is no longer around these parts.
+%p
+  %strong Deary me!
+  The page you&rsquo;re after is no longer around these parts.
