--- a/views/layout.haml
+++ b/views/layout.haml
@@ -39,3 +39,12 @@
 
     - %w( jquery-1.2.6.min code_highlighter all ).each do |js|
       %script{:src => versioned_js(js), :type => "text/javascript"}
+
+    %script{:type => "text/javascript"}
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    %script{:type => "text/javascript"}
+      try {
+      var pageTracker = _gat._getTracker("UA-196014-3");
+      pageTracker._trackPageview();
+      } catch(err) {}
