Add in the tumble styles

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,6 +5,8 @@
     %title= @page_title
     
     %link{:rel => "alternate", :href => "http://feeds.feedburner.com/toolmantim", :title => "toolmantim.com articles", :type => "application/atom+xml"}/
+    %link{:rel => "alternate", :href => "http://feeds.feedburner.com/toolmantim/tumble", :title => "toolmantim.com tumble", :type => "application/atom+xml"}/
+    
     %link{:rel => "shortcut icon", :href => "/favicon.ico"}/
 
     %link{:href => versioned_stylesheet('screen'), :media => "screen", :rel => "stylesheet", :type => "text/css"}/
