Chuck in a styling for pre too

--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -555,7 +555,13 @@ body.projects-js ol.projects > li
       :margin-bottom 1em
       code
         :font-size 1.2em
-    
+        
+    pre
+      :font-family Monaco, courier
+      :font-size 1.6em
+      :margin-bottom 1em
+      :line-height 1.1em
+      :color = !bright_text
 
   .prevnext
     :font-size 1.4em
