--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,7 +7,7 @@
     %link{:rel => "alternate", :href => "http://feeds.feedburner.com/toolmantim", :title => "toolmantim.com articles", :type => "application/atom+xml"}/
     %link{:rel => "alternate", :href => "http://feeds.feedburner.com/toolmantim/tumble", :title => "toolmantim.com tumble", :type => "application/atom+xml"}/
     
-    %link{:rel => "shortcut icon", :href => "/favicon.ico"}/
+    %link{:rel => "shortcut icon", :href => versioned_favicon}/
 
     %link{:href => versioned_stylesheet('screen'), :media => "screen", :rel => "stylesheet", :type => "text/css"}/
 
